# Cloe

./: README.md  pyproject.toml
app/: main.py
app/components/settings/tabs/hotkey/: container.py
app/components/settings/tabs/view/: tab.py
app/components/views/ocr/: base.py
app/utils/: constants.py
