[tool.poetry]
name = "Cloe"
version = "0.1.0"
description = "Manga OCR snipping tool"
authors = ["Alarcon Ace Belen"]
license = "GPL-3.0-only"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
pyqt5 = "^5.15.7"
pyqt5-qt5 = "5.15.2" # For some reason, anything above this wouldn't work? Must be a poetry issue...?
pillow = "^10.0.0"
manga-ocr = "^0.1.14"
pynput = "^1.7.6"
huggingface-hub = "^0.26.0"
transformers = "^4.40.0"
torch = "^2.4.0"

[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.14.2"
black = "^24.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"